--- a/backend/python/pyproject.toml
+++ b/backend/python/pyproject.toml
@@ -10,6 +10,10 @@ vital = "^1.1.22"
 fastapi = "^0.77.1"
 uvicorn = "^0.17.6"
 python-dotenv = "^0.20.0"
+cffi = ">=1.12.0"
+pycparser = ">=2.20"
+cryptography = ">=3.4.0"
+svix = ">=0.76.0"
 
 [tool.poetry.dev-dependencies]
 
