--- a/backend/python/pyproject.toml
+++ b/backend/python/pyproject.toml
@@ -13,7 +13,7 @@ python-dotenv = "^0.20.0"
 cffi = ">=1.12.0"
 pycparser = ">=2.20"
 cryptography = ">=3.4.0"
-svix = ">=0.76.0"
+svix = ">=0.41.2,<0.42.0"
 
 [tool.poetry.dev-dependencies]
 
