--- a/backend/python/pyproject.toml
+++ b/backend/python/pyproject.toml
@@ -6,14 +6,13 @@ authors = ["Maitham <maithamdib@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-vital = "^1.1.22"
+vital = {version = "^1.1.22", extras = []}
 fastapi = "^0.77.1"
 uvicorn = "^0.17.6"
 python-dotenv = "^0.20.0"
 cffi = ">=1.12.0"
 pycparser = ">=2.20"
 cryptography = ">=3.4.0"
-svix = ">=0.41.2,<0.42.0"
 
 [tool.poetry.dev-dependencies]
 
