--- a/backend/python/requirements.txt
+++ b/backend/python/requirements.txt
@@ -3,7 +3,7 @@ wheel>=0.38.0
 cffi>=1.12.0
 pycparser>=2.20
 cryptography>=3.4.0
-svix>=0.41.2,<0.42.0
+# svix is required by vital but we'll let vital handle its installation
 vital>=1.1.22
 fastapi>=0.77.1
 uvicorn>=0.17.6
