--- a/backend/python/pyproject.toml
+++ b/backend/python/pyproject.toml
@@ -6,18 +6,16 @@ authors = ["Maitham <maithamdib@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-vital = {version = "^1.1.22", extras = []}
-fastapi = "^0.77.1"
-uvicorn = "^0.17.6"
-python-dotenv = "^0.20.0"
-cffi = ">=1.12.0"
-pycparser = ">=2.20"
-cryptography = ">=3.4.0"
-
-[tool.poetry.dev-dependencies]
+vital = "1.1.22"
+fastapi = "0.77.1"
+uvicorn = "0.17.6"
+python-dotenv = "0.20.0"
+cffi = "1.15.1"
+pycparser = "2.21"
+cryptography = "38.0.4"
+svix = "0.41.2"
 
 [tool.poetry.group.dev.dependencies]
-cffi = "1.17.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
